# AddressSanitizer_learning

./: .gitignore  CMakeLists.txt  README.md
.clinerules/: Low_Level_Collaborator.txt  strive_for_accuracy.txt
doc/: README.md  VS_CODE_DEBUG_GUIDE.md  learning_path.md
doc/analysis/: ADDRESS_TRANSFORMATION_ANALYSIS.md  DOCUMENTATION_CLEANUP_ANALYSIS.md
doc/concepts/: 01_virtual_memory.md  02_mmap.md
doc/config/: CMakeLists.txt
doc/implementation/: addr2line_symbol_resolution_workflow.md  asan_improvement_plan.md  backtrace_to_error_report_workflow.md  final_implementation_plan.md  gwp-asan-icse2024-paper-tex-gwpasan.tex  signal_handler_implementation_guide.md  symbol_resolution_fix_star_method.md  toy_ASan_build_guide.md
doc/tools/: analyze_maps.c  debug_addr.c  mmap_comparison.c  test_addr2line.c  test_maps_analysis.c
src/experiments/addr2line_analysis/: detailed_analysis.c  verify_addr2line_input.c
src/experiments/buffer_overflow_learning/: 03_buffer_overflow.md  CMakeLists.txt  README.md  STACK_PROTECTION_ANALYSIS.md  execute_attack.c  final_attack.c  working_attack.c
src/experiments/buffer_overflow_learning/01_stack_overflow/src/: 01_basic_stack_overflow.c  02_return_address_overflow.c  03_direct_stack_overflow.c  04_successful_attack.c  05_stack_protection_demo.c
src/experiments/buffer_overflow_learning/02_heap_overflow/src/: 01_basic_heap_overflow.c  02_metadata_corruption.c
src/experiments/buffer_overflow_learning/03_consequences/src/: 01_function_pointer_hijack.c
src/experiments/signal_learning/: 02_signal_handler.c  02_signal_handler_debug.c  02_signal_handler_observable.c  CMakeLists.txt  DEBUG_CONSOLE_COMMANDS.md  DEBUG_GUIDE.md  GDB_QUICK_COMMANDS.md  README.md  VSCODE_SIGNAL_DEBUG_GUIDE.md  test_sigaction_simple.c
src/experiments/signal_learning/01_signal_basics/src/: 01_signal_basics.c
src/experiments/signal_learning/02_signal_handlers/docs/: GDB_SIGNAL_DEBUG_COMPLETE.md  SIGNAL_DEBUG_GUIDE.md
src/experiments/signal_learning/03_signal_communication/: README.md
src/experiments/signal_learning/03_signal_communication/docs/: 03_signal_recovery_from_signals.md  04_debugging_guide.md  05_learning_guide.md
src/experiments/signal_learning/03_signal_communication/src/: 03_signal_info_extractor.c  03_signal_sender.c
src/experiments/signal_learning/common_docs/: GETTING_STARTED.md  VSCODE_DEBUGGING_NOW.md
src/tests/: complete_asan_test.c  page_boundary_overflow.c  page_boundary_overflow_no_san  page_boundary_overflow_real_asan  signal_handler_test.c  test_complete_asan.c  test_right_overflow.c
src/toy_asan/: globals.c  init.c  metadata.c  signal_handler.c  toy_asan.h  toy_malloc.c
